feat(Chat, ChatRoom, FindPartner): Implement new function for chat room support to find partner feature, using redis to cache data